--- a/templates/index.html
+++ b/templates/index.html
@@ -6,14 +6,15 @@
 </head>
 
 <body>
-	<form action="" method="">
+	<form action="{{ url_for('post_note') }}" method="POST">
 		<h3>Временная записка</h3>
 		Заголовок<br>
 		<input type="text" name="ttl" /><br>
 
 		Записка<br>
 		<textarea name="note"></textarea><br>
-
+		
+		<input type = "submit" value = "submit" />
 
 	</form>
 </body>
