--- a/templates/index.html
+++ b/templates/index.html
@@ -3,19 +3,51 @@
 <head>
 	<meta charset="utf-8">
 	<title>tempNote</title>
+	<!-- <link rel="stylesheet" href="style.css"> -->
+	<link rel="stylesheet" type= "text/css" href="{{ url_for('static', filename='stylesheets/style.css') }}">
 </head>
 
 <body>
+<div id="content" >
+
 	<form action="{{ url_for('post_note') }}" method="POST">
-		<h3>Временная записка</h3>
+
+		<h1>Временная записка</h1>
 		Заголовок<br>
 		<input type="text" name="ttl" /><br>
 
 		Записка<br>
 		<textarea name="note"></textarea><br>
 		
-		<input type = "submit" value = "submit" />
+		<div class="section group">
+
+	        <div class="col">
+				<input type = "submit" value = "Создать записку" />
+				<!-- <button>Создать записку</button> -->
+			</div>
+
+	        <div class="right">
+	            <button id="advanced_options_show" class="button">Показать параметры<span id="options_on_notice_asterisk" class="hidden"> (*пока не работает)</span></button>
+	        </div>
+		</div>
 
 	</form>
+
+</div>
+
 </body>
 </html>
+
+
+<!-- 
+<div class="section group">
+            <button id="encrypt_note" class="primary_button">Создать записку</button>
+        </div>
+        <div class="col span_2_of_6 right">
+            <button id="advanced_options_show" class="button">
+                Показать параметры <span id="options_on_notice_asterisk" class="hidden">(*)</span></button>
+            <button id="advanced_options_hide" class="button hidden">
+                Отключить параметры</button>
+            <div class="hint hidden" id="options_on_notice">(*) функции, установленные ссылкой</div>
+        </div>
+    </div> -->
